--- a/Parte2/styles.css
+++ b/Parte2/styles.css
@@ -41,6 +41,16 @@ img {
     border-radius: 5px;
     object-fit: cover;
     margin: 20px;
+    transition: transform 0.3s ease, opacity 0.3s ease;
+    /* Transición suave */
+}
+
+/* Efecto hover para las imágenes */
+.image img:hover {
+    transform: scale(1.1);
+    /* Aumenta el tamaño de la imagen un 10% */
+    opacity: 0.8;
+    /* Reduce ligeramente la opacidad de la imagen */
 }
 
 /* Diseño de imagen: márgenes entre las imágenes */
@@ -51,7 +61,7 @@ img {
 }
 
 /* Adaptación para pantallas más pequeñas (móvil) */
-@media (max-width: 870px) {
+@media (max-width: 670px) {
     .image-container {
         flex-direction: column;
         align-items: center;
@@ -67,7 +77,7 @@ img {
 }
 
 /* Adaptación para pantallas medianas (de 871px a 940px) */
-@media (min-width: 871px) and (max-width: 940px) {
+@media (min-width: 671px) and (max-width: 940px) {
     .image-container {
         display: flex;
         justify-content: center;
